Update and rename 04決策第四.md to 04决策第四.md

--- a/04决策第四.md
+++ b/04决策第四.md
@@ -1,8 +1,8 @@
-# 決策第四
+# 决策第四
 
-決策者。萬智之始。何耶。曰察而後動。魚之相吞。必先度彼之大小。犬之嚙人。必先觀主之喜惡。此禽獸之決策也。雨而蓑。寒而衣。價善乃沽。人善乃欺。匹夫之決策也。陟罰臧否。伐謀伐交。卿相之決策也。其所以智於向者。唯決策有難易之別耳。故程式之能於決策者。智比於人。不能者。止一算盤耳。
+决策者。万智之始。何耶。曰察而后动。鱼之相吞。必先度彼之大小。犬之啮人。必先观主之喜恶。此禽兽之决策也。雨而蓑。寒而衣。价善乃沽。人善乃欺。匹夫之决策也。陟罚臧否。伐谋伐交。卿相之决策也。其所以智于向者。唯决策有难易之别耳。故程式之能于决策者。智比于人。不能者。止一算盘耳。
 
-其決步驟有三。一曰比之。二曰決之。三曰為之。今以馬太效應為例。書之如是。注。馬太效應者。西人典故也。曰。盈者愈予之。乏者更奪之。
+其决步骤有三。一曰比之。二曰决之。三曰为之。今以马太效应为例。书之如是。注。马太效应者。西人典故也。曰。盈者愈予之。乏者更夺之。
 
 ```
 吾有一數。曰四十九。名之曰「貯」。
@@ -13,11 +13,11 @@
 也。
 ```
 
-`大於`者。比之也。`若`。`若非`者。決之也。`加「貯」以一`云云者。為之也。比之得其真者。必為`若`云云之次句。必不為`若非`之次句。否。則反之。今以四十九不大於五十。遂行`若非`之次句。`「貯」`竟四十八。
+`大於`者。比之也。`若`。`若非`者。决之也。`加「貯」以一`云云者。为之也。比之得其真者。必为`若`云云之次句。必不为`若非`之次句。否。则反之。今以四十九不大于五十。遂行`若非`之次句。`「貯」`竟四十八。
 
-或問曰。末之`也`字者。語助耶。無之可乎。曰。不可也。所以別歧義。示一句之終止也。蓋編程之理或有極繁者。或相嵌。或相銜。亡是不能斷。用`云云`二字亦可。
+或问曰。末之`也`字者。语助耶。无之可乎。曰。不可也。所以别歧义。示一句之终止也。盖编程之理或有极繁者。或相嵌。或相衔。亡是不能断。用`云云`二字亦可。
 
-又問曰。或雖非亦於我無與者。省`若非`之句。可乎。曰。可也。例曰今有十斗之器。主人有酒若干。傾諸此器。十斗以上者皆滿盈。問器有酒竟幾何。解曰。
+又问曰。或虽非亦于我无与者。省`若非`之句。可乎。曰。可也。例曰今有十斗之器。主人有酒若干。倾诸此器。十斗以上者皆满盈。问器有酒竟几何。解曰。
 
 ```
 吾有二數。曰十。曰九。名之曰「器量」曰「酒量」。
@@ -27,9 +27,9 @@
 夫「酒量」。書之。
 ```
 
-比數之法有六。曰等於。曰不等於。曰大於。曰小於。曰不大於。曰不小於。比他物之法有二。曰等於。曰不等於。
+比数之法有六。曰等于。曰不等于。曰大于。曰小于。曰不大于。曰不小于。比他物之法有二。曰等于。曰不等于。
 
-或問曰。事有千端。非一策能定者。奈何。曰。當用`或若`。`或若`者。一`若`之後。連綿用之。因序而比。遇真輒為之。為之乃止。不更比也。如皆不是者。厥行最末`若非`之句。老氏有天地不仁。以萬物為芻狗之句。今以`或若`擬天策如是。
+或问曰。事有千端。非一策能定者。奈何。曰。当用`或若`。`或若`者。一`若`之后。连绵用之。因序而比。遇真辄为之。为之乃止。不更比也。如皆不是者。厥行最末`若非`之句。老氏有天地不仁。以万物为刍狗之句。今以`或若`拟天策如是。
 
 ```
 有言「「人」」。名之曰「物」。
@@ -49,7 +49,7 @@
 昔之「物」者。今「「芻狗」」是矣。
 ```
 
-爻者。陰陽也。是非也。有無也。臧否也。見於變數之章。今用諸決策。不亦宜乎。
+爻者。阴阳也。是非也。有无也。臧否也。见于变数之章。今用诸决策。不亦宜乎。
 
 ```
 吾有一爻。曰陽。名之曰「甲」。
@@ -60,7 +60,7 @@
 也。
 ```
 
-易曰。爻者。言乎變者也。今爻之變。其日用者有三。曰與。曰或。曰非。二爻皆陽謂之與。二爻有陽謂之或。陰者陽陽者陰謂之非。各書如是。
+易曰。爻者。言乎变者也。今爻之变。其日用者有三。曰与。曰或。曰非。二爻皆阳谓之与。二爻有阳谓之或。阴者阳阳者阴谓之非。各书如是。
 
 ```
 夫「甲」「乙」中無陰乎。名之曰「丙」。
@@ -68,9 +68,9 @@
 變「甲」。名之曰「丙」。
 ```
 
-更有與非。或非。異或諸術。皆得諸向三者。與非者。二爻有陰。或非者。二爻皆陰。異或者。一陰一陽。而六者亦皆可得諸與非。故曰。與非生萬物。
+更有与非。或非。异或诸术。皆得诸向三者。与非者。二爻有阴。或非者。二爻皆阴。异或者。一阴一阳。而六者亦皆可得诸与非。故曰。与非生万物。
 
-又有`若其然者`。`若其不然`者。以資爻策。故是二句同。
+又有`若其然者`。`若其不然`者。以资爻策。故是二句同。
 
 ```
 夫「甲」「乙」中無陰乎。名之曰「丙」。若「丙」者。吾有一言。曰「「古之人誠不我欺。」」書之也。
@@ -84,7 +84,7 @@
 夫「甲」「乙」中有陽乎。若其不然者。吾有一言。曰「「古之人誠不我欺。」」書之也。
 ```
 
-孔門十哲。顏回。閔損。冉伯牛。仲弓。宰予。子貢。冉求。子路。子游。子夏。並稱先賢。而風采各異。今四問之內。可知其誰。其法如是。
+孔门十哲。颜回。闵损。冉伯牛。仲弓。宰予。子贡。冉求。子路。子游。子夏。并称先贤。而风采各异。今四问之内。可知其谁。其法如是。
 
 ```
 夫「魯人耶」。若其然者。
@@ -121,7 +121,7 @@
 云云。
 ```
 
-仲由字子路。魯人。政事科。仕於魯衛。戰死。今一試之。
+仲由字子路。鲁人。政事科。仕于鲁卫。战死。今一试之。
 
 ```
 吾有九爻。曰陽。曰陰。曰陰。曰陽。曰陰。曰陰。曰陰。曰陰。曰陽。
@@ -135,4 +135,4 @@
 若由也。不得其死然。
 ```
 
-似此決策連環相嵌者。或取其形謂之決策樹。編程決策之道。至是略備矣。
+似此决策连环相嵌者。或取其形谓之决策树。编程决策之道。至是略备矣。
