--- a/06行列第六.md
+++ b/06行列第六.md
@@ -1,34 +1,34 @@
 # 行列第六
 
-森森矛戟。洸洸武夫。陣者兵之列也。鱗鱗孔方。穰穰青蚨。吊者錢之列也。靡靡鄭聲。丁丁清響。曲者音之列也。浩浩汪洋。揚揚義氣。文章者字之列也。天下之物既眾。或不知幾何。或不可勝數。皆以列法法之。數列列數。言列列言。爻列列爻。列列列列。罔不裁物而器。序物而次。載物而厚。是謂之列。
+森森矛戟。洸洸武夫。阵者兵之列也。鳞鳞孔方。穰穰青蚨。吊者钱之列也。靡靡郑声。丁丁清响。曲者音之列也。浩浩汪洋。扬扬义气。文章者字之列也。天下之物既众。或不知几何。或不可胜数。皆以列法法之。数列列数。言列列言。爻列列爻。列列列列。罔不裁物而器。序物而次。载物而厚。是谓之列。
 
-維編程用列之法。或入之。或取之。入法二。曰`充`。曰`銜`。取法三。曰`其一`。曰`其餘`。曰`之長`。
+维编程用列之法。或入之。或取之。入法二。曰`充`。曰`銜`。取法三。曰`其一`。曰`其餘`。曰`之長`。
 
-列之初創。空無一物。`充`者。一一添於其後也。
+列之初创。空无一物。`充`者。一一添于其后也。
 
 ```
 吾有一列。名之曰「甲」。充「甲」以三。充「甲」以五。
 ```
 
-當是時。「甲」之列乃有二數。曰三。曰五。或問曰。欲一舉而充之。可乎。曰。可也。
+当是时。「甲」之列乃有二数。曰三。曰五。或问曰。欲一举而充之。可乎。曰。可也。
 
 ```
 吾有一列。名之曰「乙」。充「乙」以二。以九。以四。以二十二。
 ```
 
-故是「甲」有二數。「乙」有四數。今欲聯合甲乙。令甲之後為乙。乙之前為甲。併兩列成一列。乃用`銜`句。
+故是「甲」有二数。「乙」有四数。今欲联合甲乙。令甲之后为乙。乙之前为甲。併两列成一列。乃用`銜`句。
 
 ```
 銜「甲」以「乙」。名之曰「丙」。
 ```
 
-遑論列之若干。亦可一舉而銜之如是。
+遑论列之若干。亦可一举而衔之如是。
 
 ```
 銜「甲」以「乙」。以「丙」。以「丁」。名之曰「戊」。
 ```
 
-既見入法。復聞取法。今取其列之首物。次物。觀之用之。書之如是。
+既见入法。复闻取法。今取其列之首物。次物。观之用之。书之如是。
 
 ```
 夫「甲」之一。書之。
@@ -36,14 +36,14 @@
 夫「乙」之四。加其以四十五。書之。
 ```
 
-欲易列中之物。乃稍變前章`昔之`句。書如是。
+欲易列中之物。乃稍变前章`昔之`句。书如是。
 
 ```
 昔之「甲」之一者。今五是矣。
 昔之「乙」之三者。今「丙」之四是矣。
 ```
 
-列之長短無定。或寥寥二三物。乃至成千上萬。然亦毋須另記。時可以`之長`句得之也。既知其長。以循環次第觀一列之物。易矣。
+列之长短无定。或寥寥二三物。乃至成千上万。然亦毋须另记。时可以`之長`句得之也。既知其长。以循环次第观一列之物。易矣。
 
 ```
 夫「甲」之長。書之。
@@ -54,17 +54,17 @@
 加「乙」以一。昔之「乙」者。今其是矣。云云。
 ```
 
-列既能增而長之。亦可分以短之。`其餘`者。棄其第一而留其他也。
+列既能增而长之。亦可分以短之。`其餘`者。弃其第一而留其他也。
 
 ```
 夫「甲」之其餘。名之曰「乙」。
 ```
 
-使「甲」有一二三者。「乙」乃有二三。使「甲」有二四六八者。「乙」乃有四六八。是謂`其餘`也。
+使「甲」有一二三者。「乙」乃有二三。使「甲」有二四六八者。「乙」乃有四六八。是谓`其餘`也。
 
-或問曰。先充之以數。後充之以言。或復充之以爻。可乎。曰。不可也。列初創。其類無定。然既充輒知。自是不得混淆耳。
+或问曰。先充之以数。后充之以言。或复充之以爻。可乎。曰。不可也。列初创。其类无定。然既充辄知。自是不得混淆耳。
 
-又列有異名者。其實或同。牽一而二動。例曰。
+又列有异名者。其实或同。牵一而二动。例曰。
 
 ```
 吾有一列。名之曰「甲」。充「甲」以一。以二。以三。
@@ -73,16 +73,16 @@
 夫「甲」。書之。
 ```
 
-乃得「甲」者。`四。二。三。`也。唯易「乙」而殃及「甲」。不亦謬乎。曰。非也。蓋「甲」「乙」所指。同一列也。名雖二則實一也。問曰。欲令其實亦二。互不相干。當如何。曰。當如是。
+乃得「甲」者。`四。二。三。`也。唯易「乙」而殃及「甲」。不亦谬乎。曰。非也。盖「甲」「乙」所指。同一列也。名虽二则实一也。问曰。欲令其实亦二。互不相干。当如何。曰。当如是。
 
 ```
 吾有一列。名之曰「乙」。
 凡「甲」中之「元」。充「乙」以「元」也。
 ```
 
-漢張衡字平子。全才人也。文有四愁詩。其詩風流婉轉。上承屈子之遺義。下啟七言之濫觴。今假其詩以示列之用。
+汉张衡字平子。全才人也。文有四愁诗。其诗风流婉转。上承屈子之遗义。下启七言之滥觞。今假其诗以示列之用。
 
-其詩四章。句多復沓。若「我所思兮在」云云皆同。唯「太山」「桂林」。「金錯刀」「琴琅玕」諸辭固異。故先入其變辭於列中待用也。
+其诗四章。句多复沓。若「我所思兮在」云云皆同。唯「太山」「桂林」。「金错刀」「琴琅玕」诸辞固异。故先入其变辞于列中待用也。
 
 ```
 吾有八列。名之曰「其所」。曰「所難」。曰「其方」。曰「所沾」。曰「所贈」。曰「所報」。曰「所感」。曰「所傷」。
@@ -96,7 +96,7 @@
 充「所傷」以「「勞」」以「「傷」」以「「紆」」以「「惋」」。
 ```
 
-未示其詩。請先以一觀諸列。`凡「列」中之「元」`者。亦循環也。是句見於前章。斯人所居。斯人所遺。藉此以列之。
+未示其诗。请先以一观诸列。`凡「列」中之「元」`者。亦循环也。是句见于前章。斯人所居。斯人所遗。藉此以列之。
 
 ```
 凡「其所」中之「地」。
@@ -110,7 +110,7 @@
 吾有一言。曰「「此皆美人之所贈也」」。書之。
 ```
 
-乃以左書張子之詩。其循環之體。或言復沓。或取變辭於諸列。終一章一併書之。
+乃以左书张子之诗。其循环之体。或言复沓。或取变辞于诸列。终一章一併书之。
 
 ```
 有數一。名之曰「章」。
@@ -128,7 +128,7 @@
 云云。
 ```
 
-乃得原詩如是。
+乃得原诗如是。
 
 
 ```
@@ -138,11 +138,11 @@
 我所思兮在雁門。欲往從之雪雰雰。側身北望涕沾巾。美人贈我錦繡段。何以報之青玉案。路遠莫致倚增嘆。何爲懷憂心煩惋
 ```
 
-其詩晉人傅玄。宋人張載。近人魯迅皆嘗為擬作。請吾子擇己所好。試易前文諸列以得其詩。
+其诗晋人傅玄。宋人张载。近人鲁迅皆尝为拟作。请吾子择己所好。试易前文诸列以得其诗。
 
-列列者。載列之列也。縱橫如方陣然。如棋局然。如田壠然。
+列列者。载列之列也。纵横如方阵然。如棋局然。如田壠然。
 
-尚書正義曰。天與禹洛出書。神龜負文而出。列於背。有數至於九。禹遂因而第之。以成九類。朱熹以之為九宮數。奇者合縱橫斜皆十五。其術見於楊輝續古摘奇算法。曰九子斜排。上下對易。左右相更。四維挺出。戴九履一。左三右七。二四為肩。六八為足。五居中央。今入九宮數於列列如下。
+尚书正义曰。天与禹洛出书。神龟负文而出。列于背。有数至于九。禹遂因而第之。以成九类。朱熹以之为九宫数。奇者合纵横斜皆十五。其术见于杨辉续古摘奇算法。曰九子斜排。上下对易。左右相更。四维挺出。戴九履一。左三右七。二四为肩。六八为足。五居中央。今入九宫数于列列如下。
 
 ```
 吾有一列。名之曰「行一」。充「行一」以四。以九。以二。
@@ -153,7 +153,7 @@
 凡「九宮」中之「行」。夫「行」。書之也。
 ```
 
-然是但列其數。未嘗以術算之。假楊氏妙術。三三圖。五五圖。七七圖。九九圖。凡其橫縱為陽數者。皆一法可得。然楊氏固不自知。猶以他法為之。今從其洛書簡法。編程如是。注曰。圖之創。苟以循環。盡充以零。蓋待後算也。夫「廣」者。縱橫之數也。聊曰九。以為九九圖。
+然是但列其数。未尝以术算之。假杨氏妙术。三三图。五五图。七七图。九九图。凡其横纵为阳数者。皆一法可得。然杨氏固不自知。犹以他法为之。今从其洛书简法。编程如是。注曰。图之创。苟以循环。尽充以零。盖待后算也。夫「广」者。纵横之数也。聊曰九。以为九九图。
 
 ```
 有數九。名之曰「廣」。
@@ -165,7 +165,7 @@
   充「縱橫圖」以「行」也。
 ```
 
-既創其圖。乃以楊氏之術遍算其數。注曰。「磔」者。捺筆也。自左上而右下。「掠」者。撇筆也。自右上而左下。此二子者。假書家語。所以定九子斜排之方位也。「勒」者。橫筆也。「努」者。縱筆也。此二子者。所以化斜排之方位於正排之方位也。然「勒」「努」之位。或出於其圖之界。遂以求餘法。令出上者下。出下者上。出左者右。出右者左。是所謂上下對易。左右相更者也。乃得「縱」「橫」。於是填以「數」。終得其圖矣。
+既创其图。乃以杨氏之术遍算其数。注曰。「磔」者。捺笔也。自左上而右下。「掠」者。撇笔也。自右上而左下。此二子者。假书家语。所以定九子斜排之方位也。「勒」者。横笔也。「努」者。纵笔也。此二子者。所以化斜排之方位于正排之方位也。然「勒」「努」之位。或出于其图之界。遂以求馀法。令出上者下。出下者上。出左者右。出右者左。是所谓上下对易。左右相更者也。乃得「纵」「横」。于是填以「数」。终得其图矣。
 
 ```
 減「廣」以一。除其以二。名之曰「半」。
@@ -185,7 +185,7 @@
 凡「縱橫圖」中之「行」。夫「行」。書之也。
 ```
 
-乃得九九圖如是。其與楊氏書中所載不同者。蓋作其圖之法甚眾。所得亦各有異。然其之為縱橫圖者一也。一者何耶。縱橫斜皆三百六十九也。或問曰。何以知之。曰。請吾子試作一術。循環遍歷其圖。以驗吾言之不謬也。
+乃得九九图如是。其与杨氏书中所载不同者。盖作其图之法甚众。所得亦各有异。然其之为纵横图者一也。一者何耶。纵横斜皆三百六十九也。或问曰。何以知之。曰。请吾子试作一术。循环遍历其图。以验吾言之不谬也。
 
 ```
 三十七。七十八。二十九。　七十。二十一。六十二。一十三。五十四。　五
@@ -199,5 +199,5 @@
 七十七。二十八。六十九。　二十。六十一。一十二。五十三。　四　。四十五
 ```
 
-又有傳暹羅法作陽數縱橫圖。其決曰。一起於正北。東北向次第填之。出北入南。出東入西。道有礙者。先南退而後進。其較楊輝法猶稍易也。君胡不一試之。列之道。列列之道。至是略備矣。更有列列列。列列列列者。皆一理也。
+又有传暹罗法作阳数纵横图。其决曰。一起于正北。东北向次第填之。出北入南。出东入西。道有碍者。先南退而后进。其较杨辉法犹稍易也。君胡不一试之。列之道。列列之道。至是略备矣。更有列列列。列列列列者。皆一理也。
 
