Update and rename 08方術第八.md to 08方术第八.md

--- a/08方术第八.md
+++ b/08方术第八.md
@@ -1,8 +1,8 @@
-# 方術第八
+# 方术第八
 
-抱朴。參同。萬畢。古之方術書也。周髀。九章。海島。古之算術書也。孫吳。三略。六韜。古之兵術書也。術者竟何。成法也。夫人之初任一事。有成有敗。或得或失。卒不知孰為可法。君子仰觀前人之殷鑒。俯羅不易之步驟。法象萬物。為法為道。名之曰術。後人循之遵之。成事因之。故韓非子曰。人主之所執也。
+抱朴。参同。万毕。古之方术书也。周髀。九章。海岛。古之算术书也。孙吴。三略。六韬。古之兵术书也。术者竟何。成法也。夫人之初任一事。有成有败。或得或失。卒不知孰为可法。君子仰观前人之殷鉴。俯罗不易之步骤。法象万物。为法为道。名之曰术。后人循之遵之。成事因之。故韩非子曰。人主之所执也。
 
-今之編程者亦有術也。何耶。唯取步驟而名之耳。令機器聞其名而知其謂。不待每每絮絮道之而後明也。既定其步驟。雖欲施之百遍。但稱名可矣。故云。術亦變數之類也。吾聞有尤矜於斯者。號曰。術亦數。以銘座右。今重敘問天地好在之例如是。示術之用。
+今之编程者亦有术也。何耶。唯取步骤而名之耳。令机器闻其名而知其谓。不待每每絮絮道之而后明也。既定其步骤。虽欲施之百遍。但称名可矣。故云。术亦变数之类也。吾闻有尤矜于斯者。号曰。术亦数。以铭座右。今重叙问天地好在之例如是。示术之用。
 
 ```
 吾有一術。名之曰「問天」。是術曰。
@@ -18,7 +18,7 @@
 為是九遍。施「問天」也。
 ```
 
-又凡術多有參數。有得數。參者入也。得者出也。點鐵成金者。參者鐵也。得者金也。老物化形者。參者獸也。得者人也。玄女錢米者。參者一文十粒。得者一貫盈桶也。金丹大道者。参者鉛丹砂硫磺硝石云。得者還丹也。或問曰。無參者有之乎。無得者有之乎。曰。有也。左慈釣鱸。無中生有。魑魅遁形。有化於無。養丹吐氣。無終歸無。九章算術有更相減損術。見於前循環之章。今術之。以示參得之用如是。
+又凡术多有参数。有得数。参者入也。得者出也。点铁成金者。参者铁也。得者金也。老物化形者。参者兽也。得者人也。玄女钱米者。参者一文十粒。得者一贯盈桶也。金丹大道者。参者铅丹砂硫磺硝石云。得者还丹也。或问曰。无参者有之乎。无得者有之乎。曰。有也。左慈钓鲈。无中生有。魑魅遁形。有化于无。养丹吐气。无终归无。九章算术有更相减损术。见于前循环之章。今术之。以示参得之用如是。
 
 ```
 吾有一術。名之曰「更相減損」。欲行是術。必先得二數。曰「甲」曰「乙」。乃行是術曰。
@@ -35,7 +35,7 @@
 是謂「更相減損」之術也。
 ```
 
-「必先得」云云者。所以名參數也。「乃得」云云者。所以名得數也。施之如是。
+「必先得」云云者。所以名参数也。「乃得」云云者。所以名得数也。施之如是。
 
 ```
 施「更相減損」於九十一。於四十九。書之。
@@ -45,9 +45,9 @@
 施「更相減損」於九百七十。於四。書之。
 ```
 
-乃得七。八。二諸數。參不同。而一術蔽之。不亦易乎。故曰。凡用非一。皆當術之。斯亦所以令程式明練可讀。如文章之命篇者也。又或改易一處。則施者皆不易而易矣。故曰術者雖非必有。然欲以程式立大事者。用術乃不可不精也。
+乃得七。八。二诸数。参不同。而一术蔽之。不亦易乎。故曰。凡用非一。皆当术之。斯亦所以令程式明练可读。如文章之命篇者也。又或改易一处。则施者皆不易而易矣。故曰术者虽非必有。然欲以程式立大事者。用术乃不可不精也。
 
-或問曰。參數非數。可乎。參一。參三。參四。參若干。當作何書。曰當如是。
+或问曰。参数非数。可乎。参一。参三。参四。参若干。当作何书。曰当如是。
 
 ```
 吾有一術。名之曰「雜燴」。欲行是術。
@@ -61,7 +61,7 @@
 是謂「雜燴」之術也。
 ```
 
-又凡至「乃得」句。輒立止其術。餘句雖多。亦不復行也。蓋於理亦應然。例曰。
+又凡至「乃得」句。辄立止其术。馀句虽多。亦不复行也。盖于理亦应然。例曰。
 
 ```
 吾有一術。名之曰「論戰」。欲行是術。必先得一言曰「恃」。乃行是術曰。
@@ -72,7 +72,7 @@
 是謂「論戰」之術也。
 ```
 
-又凡前句所算。即其術所得者。不必付諸變數。但書「乃得矣」可也。例曰。
+又凡前句所算。即其术所得者。不必付诸变数。但书「乃得矣」可也。例曰。
 
 ```
 吾有一術。名之曰「倍」。欲行是術。必先得一數曰「甲」。乃行是術曰。
@@ -80,9 +80,9 @@
 是謂「倍」之術也。
 ```
 
-或問曰。欲以「乃得」立止其術。然其術實當無所得。安書。曰以「乃歸空無」。
+或问曰。欲以「乃得」立止其术。然其术实当无所得。安书。曰以「乃归空无」。
 
-向者曰。術亦數。欲以術為參數。以術為得數。可乎。曰。可也。例曰。今有一列。儲物若干。欲以一法。去其糟粕。取其精華。然有諸公。秉法各異。同逢一馬。或稱騏驥。或以駑駘。共飲一壺。或稱瓊漿。或以馬溺。故今是術。一術為參。甲術參之。適甲所欲。乙術參之。適乙所想。是術曰。
+向者曰。术亦数。欲以术为参数。以术为得数。可乎。曰。可也。例曰。今有一列。储物若干。欲以一法。去其糟粕。取其精华。然有诸公。秉法各异。同逢一马。或称骐骥。或以驽骀。共饮一壶。或称琼浆。或以马溺。故今是术。一术为参。甲术参之。适甲所欲。乙术参之。适乙所想。是术曰。
 
 ```
 吾有一術。名之曰「篩剔」。欲行是術。必先得一列曰「甲」。一術曰「法」。乃行是術曰。
@@ -94,7 +94,7 @@
 是謂「篩剔」之術也。
 ```
 
-定一列二術以試之。
+定一列二术以试之。
 
 ```
 吾有一列。名之曰「丙」。充「丙」以一以二以三以四以五以六以七。
@@ -118,9 +118,9 @@
 二。四。六。
 ```
 
-又術有自施者。其術之中復施其術。號之曰「遞歸」。遞歸者何。吾有三比。譬取二銅鏡而對置。人立其間。鏡鏡相照。乃見無窮之象。譬曩有山廟。廟有二僧。其老者語少者曰。曩有山廟。廟有二僧。其老者語少者曰。曩有山廟。廟有二僧云云。譬莊周之夢蝶。其夢蝶復夢莊周。蝶夢之莊周復夢一蝶。周夢之蝶夢之周夢之蝶復夢一周云云。
+又术有自施者。其术之中复施其术。号之曰「递归」。递归者何。吾有三比。譬取二铜镜而对置。人立其间。镜镜相照。乃见无穷之象。譬曩有山庙。庙有二僧。其老者语少者曰。曩有山庙。庙有二僧。其老者语少者曰。曩有山庙。庙有二僧云云。譬庄周之梦蝶。其梦蝶复梦庄周。蝶梦之庄周复梦一蝶。周梦之蝶梦之周梦之蝶复梦一周云云。
 
-又凡循環皆可作遞歸解。遞歸皆可作循環解。但擇其易敘者而為之也。譬客有問行百步之法者。一曰。百遍為之而行一步。是行百步也。此循環也。一曰。先行一步。復行其餘九十九也。若問何以行其九十九耶。則先行一步。復行其九十八步也。此遞歸也。例曰。莊子云。一尺之棰。日取其半。萬世不竭。今既十日。問其棰長。
+又凡循环皆可作递归解。递归皆可作循环解。但择其易叙者而为之也。譬客有问行百步之法者。一曰。百遍为之而行一步。是行百步也。此循环也。一曰。先行一步。复行其馀九十九也。若问何以行其九十九耶。则先行一步。复行其九十八步也。此递归也。例曰。庄子云。一尺之棰。日取其半。万世不竭。今既十日。问其棰长。
 
 ```
 吾有一術。名之曰「量棰」。欲行是術。必先得二數。曰「今長」。曰「餘日」。乃行是術曰。
@@ -139,7 +139,7 @@
 九絲七忽六微五纖六沙二塵五埃 
 ```
 
-算數亦多有用遞歸者。譬宋賈憲有釋鎖求廉本源。或謂賈憲三角。其術曰列所開方數以隅算一自下增入前位至首位而止復以隅算如前升增遞低一位求之云。以其術中數皆求自上層。上層之數又求自其上。是遞歸也。故例曰。
+算数亦多有用递归者。譬宋贾宪有释锁求廉本源。或谓贾宪三角。其术曰列所开方数以隅算一自下增入前位至首位而止复以隅算如前升增递低一位求之云。以其术中数皆求自上层。上层之数又求自其上。是递归也。故例曰。
 
 ```
 吾有一術。名之曰「求賈憲三角數」。欲行是術。必先得二數。曰「層」曰「位」。乃行是術曰。
@@ -154,7 +154,7 @@
 是謂「求賈憲三角數」之術也。
 ```
 
-此所以求一層一位之數也。今欲盡畫若干層之數。亦以術為之。示術之相用也。注曰。是術行甚緩。非良也。良者稍繁。見於章末。
+此所以求一层一位之数也。今欲尽画若干层之数。亦以术为之。示术之相用也。注曰。是术行甚缓。非良也。良者稍繁。见于章末。
 
 ```
 吾有一術。名之曰「畫賈憲三角」。欲行是術。必先得一數。曰「層數」。是術曰。
@@ -183,7 +183,7 @@
 　一　　六　　十五　　二十　　十五　　六　　一　
 ```
 
-或問曰。於術之體。復敘一術。可乎。曰。可也。是以明內術之所以隸於外術。易前賈憲三角術如是。
+或问曰。于术之体。复叙一术。可乎。曰。可也。是以明内术之所以隶于外术。易前贾宪三角术如是。
 
 ```
 吾有一術。名之曰「畫賈憲三角」。欲行是術。必先得一數。曰「層數」。是術曰。
@@ -208,9 +208,9 @@
 是謂「畫賈憲三角」之術也。
 ```
 
-「求」者。內術也。「畫」者。外術也。為是。則內術不得用於外術之外。此「域」也。「域」者。所以限變數之語境也。譬唐人語李密。謂牛角掛書之李密也。晉人語李密。謂舅奪母志之李密也。有域。則名不致混淆也。術之體一域也。決策循環之體。亦一域也。術之參者。域與術體同。
+「求」者。内术也。「画」者。外术也。为是。则内术不得用于外术之外。此「域」也。「域」者。所以限变数之语境也。譬唐人语李密。谓牛角挂书之李密也。晋人语李密。谓舅夺母志之李密也。有域。则名不致混淆也。术之体一域也。决策循环之体。亦一域也。术之参者。域与术体同。
 
-又凡云一名。其域有之者則得其謂。無之則外一域而得之。更無乃次第而外。竟無。法不行。譬有李氏生子而命之曰白者。於家中呼其名。謂子也。出其門。乃謂詩人也。例曰。
+又凡云一名。其域有之者则得其谓。无之则外一域而得之。更无乃次第而外。竟无。法不行。譬有李氏生子而命之曰白者。于家中呼其名。谓子也。出其门。乃谓诗人也。例曰。
 
 ```
 有數四。名之曰「丙」。
@@ -227,9 +227,9 @@
 注曰「「此之丙。內之乙。此之丁。內之丙。似此逆行倒施者。自非佳法。唯示域之用耳」」
 ```
 
-一術既定。其域乃與其術恆共存。於他處施是術。是術亦得其域之變數而用之。是謂「閉包」也。夫前者賈憲三角術。行甚緩。蓋其循環之中。每每復求既得之數。實屬揮霍。今以閉包。存既得之數於域中一列。以資後算。不令作無用之功也。
+一术既定。其域乃与其术恆共存。于他处施是术。是术亦得其域之变数而用之。是谓「闭包」也。夫前者贾宪三角术。行甚缓。盖其循环之中。每每复求既得之数。实属挥霍。今以闭包。存既得之数于域中一列。以资后算。不令作无用之功也。
 
-是術也。以術得術。所得「求」術。「藏」列存焉。以此「求」替前之「求」。用「畫」中。大速之焉。
+是术也。以术得术。所得「求」术。「藏」列存焉。以此「求」替前之「求」。用「画」中。大速之焉。
 
 ```
 吾有一術。名之曰「賈憲三角術」。是術曰。
@@ -271,7 +271,7 @@
 施「賈憲三角術」。名之曰「求賈憲三角數」。
 ```
 
-又術之施也。除前法之外。亦可取即算而未名之變數作參也。其法曰「取若干以施某術」。若干者。參之多少也。其理蓋於「書之」略同。易前莊子棰術為例。
+又术之施也。除前法之外。亦可取即算而未名之变数作参也。其法曰「取若干以施某术」。若干者。参之多少也。其理盖于「书之」略同。易前庄子棰术为例。
 
 ```
 吾有一術。名之曰「量棰」。欲行是術。必先得二數。曰「今長」。曰「餘日」。乃行是術曰。
@@ -280,5 +280,5 @@
 是謂「量棰」之術也。
 ```
 
-術之道。至是略備矣。比其前章諸法。愈增玄妙。請吾子細審其例。更以自試。方達自如云耳。
+术之道。至是略备矣。比其前章诸法。愈增玄妙。请吾子细审其例。更以自试。方达自如云耳。
 
