Update and rename 09府庫第九.md to 09府库第九.md

--- a/09府库第九.md
+++ b/09府库第九.md
@@ -1,27 +1,27 @@
-# 府庫第九
+# 府库第九
 
-夫人之欲蓄一物。或諸袖中。或諸案左。物其多也。乃藏諸箱篋。儲諸籠笥。篋笥不能盡容。復載以牛車。束以高閣。彼亦不能足者。乃入山斷木。文梓楩柟。巧工施校。為雕梁畫棟。樓閣起焉。蓄一國之物。乃興冊府。武庫。倉廩。以羅天下之可寶。今以編程之繁複。亦設府庫以輯有用之法。既驗之策。如書齋然。如箱篋然。唯時取之。以為作者助也。
+夫人之欲蓄一物。或诸袖中。或诸案左。物其多也。乃藏诸箱箧。储诸笼笥。箧笥不能尽容。复载以牛车。束以高阁。彼亦不能足者。乃入山断木。文梓楩柟。巧工施校。为雕梁画栋。楼阁起焉。蓄一国之物。乃兴册府。武库。仓廪。以罗天下之可宝。今以编程之繁複。亦设府库以辑有用之法。既验之策。如书斋然。如箱箧然。唯时取之。以为作者助也。
 
-所藏者。術之集也。法古而名之曰書。今擷數書為例。計開。
+所藏者。术之集也。法古而名之曰书。今撷数书为例。计开。
 
-- 算經者。所以資算術也。開方。勾股。密率。此之類也。
-- 列經者。所以析列也。篩剔。合併。排序。此之類也。
-- 曆法者。演算天時也。求年月日時刻。此之類也。
-- 畫譜者。所以為圖畫也。勾描。皴法。設色。此之類也。
+- 算经者。所以资算术也。开方。勾股。密率。此之类也。
+- 列经者。所以析列也。筛剔。合併。排序。此之类也。
+- 曆法者。演算天时也。求年月日时刻。此之类也。
+- 画谱者。所以为图画也。勾描。皴法。设色。此之类也。
 
-欲得一書一術。乃引之如是。
+欲得一书一术。乃引之如是。
 
 ```
 吾嘗觀「「算經」」之書。方悟「平方根」之義。
 ```
 
-既得「平方根」之術。遂得而用之如是。
+既得「平方根」之术。遂得而用之如是。
 
 ```
 施「平方根」於八十一。書之。
 ```
 
-乃得「九」耳。欲取非一者。但魚貫之可也。例曰。
+乃得「九」耳。欲取非一者。但鱼贯之可也。例曰。
 
 ```
 吾嘗觀「「算經」」之書。方悟「圓周率」「勾股求弦」「冪」之義。
@@ -36,7 +36,7 @@
 施「今日何日」。書之。
 ```
 
-又聊取列經之諸術。略述其用也。
+又聊取列经之诸术。略述其用也。
 
 ```
 吾嘗觀「「列經」」之書。方悟「遍施」「篩剔」「左併」「右併」「排序」「倒序」「索一」之義。
@@ -44,7 +44,7 @@
 吾有一列。名之曰「甲」。充「甲」以三。以二。以九。以一。以六。以十七。以四十二。
 ```
 
-遍施者。參者一術一列。凡列中之物。一一施其術。另充於一列而得之也。
+遍施者。参者一术一列。凡列中之物。一一施其术。另充于一列而得之也。
 
 ```
 吾有一術。名之曰「倍」。欲行是術。必先得一數。名之曰「甲」。乃行是術曰。
@@ -67,7 +67,7 @@
 注曰。「「所以得「甲」中數之總和也」」
 ```
 
-排序者。參者一術一列。易列之序。令彼物自小而大者也。其參術者。所以定小大也。蓋因數之小大易明。然可排序者不唯數而已矣。故小大之繩。施者視其類而自定也。其比二物也。小之當得負。大之當得正。等之當得零。
+排序者。参者一术一列。易列之序。令彼物自小而大者也。其参术者。所以定小大也。盖因数之小大易明。然可排序者不唯数而已矣。故小大之绳。施者视其类而自定也。其比二物也。小之当得负。大之当得正。等之当得零。
 
 ```
 吾有一術。名之曰「比」。欲行是術。必先得二數。名之曰「甲」。曰「乙」。乃行是術曰。
@@ -80,22 +80,22 @@
 施「排序」於「比」於「甲」。書之。
 ```
 
-倒序者。參者一列。唯逆其序耳。入者甲乙丙丁。出者丁丙乙甲也。
+倒序者。参者一列。唯逆其序耳。入者甲乙丙丁。出者丁丙乙甲也。
 
 ```
 施「倒序」於「甲」。書之。
 ```
 
-索一者。參者一列一元。於列中尋其元也。尋而得之者。乃得其序數也。首物等元者。得一。次物等元者。得二。不得者。乃得零也。
+索一者。参者一列一元。于列中寻其元也。寻而得之者。乃得其序数也。首物等元者。得一。次物等元者。得二。不得者。乃得零也。
 
 ```
 施「索一」於「甲」於九。書之。
 施「索一」於「甲」於十五。書之。
 ```
 
-其餘諸書所羅者。亦多也。一一敘之者。則非此篇之本意也。唯「渾沌」「格物」「畫譜」三經。更見於後章。
+其馀诸书所罗者。亦多也。一一叙之者。则非此篇之本意也。唯「浑沌」「格物」「画谱」三经。更见于后章。
 
-或問曰。此引他書之法吾明矣。欲自為一書而引之。可乎。曰。可也。另立一程式。命之以書名。於其書中。凡欲為他書所引之變數。皆易「吾有」為「今有」。如是。
+或问曰。此引他书之法吾明矣。欲自为一书而引之。可乎。曰。可也。另立一程式。命之以书名。于其书中。凡欲为他书所引之变数。皆易「吾有」为「今有」。如是。
 
 ```
 注曰「「當名是程式曰「勾股算經」」」。
@@ -118,7 +118,7 @@
 吾有一數。曰六。名之曰「唯吾知之」。注曰「「凡以「吾有」言變數者。他書不得引之」」
 ```
 
-是書既成。乃另作一程式。引而驗之。
+是书既成。乃另作一程式。引而验之。
 
 ```
 吾嘗觀「「勾股算經」」之書。方悟「勾股求弦」「勾弦求股」「勾例」「股例」之義。
@@ -127,4 +127,4 @@
 施「勾弦求股」於五。於十三。書之。
 ```
 
-著引二道。至是略備矣。程式既長。使盡入一文。輒如亂粥也。故立大事者。多擘其文。分作數書。而更相引用。脈絡既明。亦大裨益於檢索也。
+著引二道。至是略备矣。程式既长。使尽入一文。辄如乱粥也。故立大事者。多擘其文。分作数书。而更相引用。脉络既明。亦大裨益于检索也。
