--- a/10格物第十.md
+++ b/10格物第十.md
@@ -1,8 +1,8 @@
 # 格物第十
 
-老子云。道生一。一生二。二生三。三生萬物。列子云。凡有貌象聲色者。皆物也。物之既有此眾端者。數言爻列術或不足表。故作一類。特名之曰物。是物者。所以合他類以狀一物之諸端者也。譬人之姓字者。言也。人之年齒者。數也。人有男女。陰陽也。或有所蓄。列也。或傍一技。術也。合而謂之人。譬石之白。色也。石之堅。質也。色質者。數也。合而謂之石。離合萬物。物物之道也。禮曰。致知在格物。物格而後知致。
+老子云。道生一。一生二。二生三。三生万物。列子云。凡有貌象声色者。皆物也。物之既有此众端者。数言爻列术或不足表。故作一类。特名之曰物。是物者。所以合他类以状一物之诸端者也。譬人之姓字者。言也。人之年齿者。数也。人有男女。阴阳也。或有所蓄。列也。或傍一技。术也。合而谓之人。譬石之白。色也。石之坚。质也。色质者。数也。合而谓之石。离合万物。物物之道也。礼曰。致知在格物。物格而后知致。
 
-今且以白馬為例。示物之叙也。
+今且以白马为例。示物之叙也。
 
 ```
 吾有一物。名之曰「白馬」。其物如是。
@@ -15,14 +15,14 @@
 是謂「白馬」之物也。
 ```
 
-其物既敘。復得取其端書如是。
+其物既叙。复得取其端书如是。
 
 ```
 夫「白馬」之「「名」」。書之。
 夫「白馬」之「「日行里數」」。書之。
 ```
 
-易之用之。無少異於諸變數。
+易之用之。无少异于诸变数。
 
 ```
 夫「白馬」之「「日行里數」」。除其以二。昔之「白馬」之「「日行里數」」者。今其是矣。
@@ -30,7 +30,7 @@
 注曰。「「斯馬老矣」」。
 ```
 
-或問曰。今有駿馬千匹。似此一一敘之者。不亦煩乎。曰。以術生之。或謂造物之術。
+或问曰。今有骏马千匹。似此一一叙之者。不亦烦乎。曰。以术生之。或谓造物之术。
 
 ```
 吾有一術。名之曰「生馬」。欲行是術。必先得二言。曰「馬名」。曰「毛色」。乃行是術曰。
@@ -46,7 +46,7 @@
 是謂「生馬」之術也。
 ```
 
-八駿者。同為穆天子良馬。唯毛色不同。故其術唯參馬名毛色二者。或欲增其參數。亦無不可也。施之乃聚八駿於一列。注。郭璞曰。八駿皆因其毛色以為名號耳。然踰輪山子綠耳之色不見載。世為圖畫者亦多。然皆不知所據。余既不能考。而學又淺。故從闕耳。
+八骏者。同为穆天子良马。唯毛色不同。故其术唯参马名毛色二者。或欲增其参数。亦无不可也。施之乃聚八骏于一列。注。郭璞曰。八骏皆因其毛色以为名号耳。然踰轮山子绿耳之色不见载。世为图画者亦多。然皆不知所据。余既不能考。而学又浅。故从阙耳。
 
 ```
 吾有一列。名之曰「八駿」。
@@ -62,7 +62,7 @@
 	夫「馬」之「「名」」。書之也。
 ```
 
-或問曰。既有一物。欲知其諸端之名。奈何。或問曰。今欲取物之一端。然其名未遽知。唯於運算中得之。奈何。或問曰。偶得一物。不知其為物耶。其為數為言為爻為術為列耶。奈何。曰引「格物」。
+或问曰。既有一物。欲知其诸端之名。奈何。或问曰。今欲取物之一端。然其名未遽知。唯于运算中得之。奈何。或问曰。偶得一物。不知其为物耶。其为数为言为爻为术为列耶。奈何。曰引「格物」。
 
 ```
 吾嘗觀「「格物」」之書。方悟「取物」「置物」「列物之端」「識類」之義。
@@ -83,7 +83,7 @@
 施「識類」於「「善哉斯言」」。書之。注曰「「得言」」
 ```
 
-又物者。雖貌盡同而其實或非一也。如玉刻雙璋。錦挑對褓。故以「等於」法比之。唯實一物二名方得陽。非是。皆得陰。欲以諸端同而同之者。必一一校而後可。非唯物然。列亦如是也。
+又物者。虽貌尽同而其实或非一也。如玉刻双璋。锦挑对褓。故以「等于」法比之。唯实一物二名方得阳。非是。皆得阴。欲以诸端同而同之者。必一一校而后可。非唯物然。列亦如是也。
 
 ```
 吾有一物。名之曰「戊」。其物如是。
@@ -112,9 +112,9 @@
 也。
 ```
 
-又以物包羅諸象。或令機器寫之以存運算之所得。或使讀之以為運算之所參。罔不嘉焉。然以其辭稍煩。以所函略廣。故另為渾沌之辭。精煉其字。簡易其法。以資讀寫之便也。復作渾沌之術。得其言而化之為物。得其物而以其言載之。
+又以物包罗诸象。或令机器写之以存运算之所得。或使读之以为运算之所参。罔不嘉焉。然以其辞稍烦。以所函略广。故另为浑沌之辞。精炼其字。简易其法。以资读写之便也。复作浑沌之术。得其言而化之为物。得其物而以其言载之。
 
-渾沌者。食也。揚雄曰。餅謂之飩。今薄麵夾餡入湯者也。取其包物之義。故名。
+浑沌者。食也。扬雄曰。饼谓之饨。今薄麵夹馅入汤者也。取其包物之义。故名。
 
 ```
 吾嘗觀「渾沌經」之書。方悟「包渾沌」之義。
@@ -122,7 +122,7 @@
 施「包渾沌」於「白馬」。書之。
 ```
 
-得如左。渾沌凡言數者。唯列其位。譬不謂三千八百七十。但謂三八七〇耳。
+得如左。浑沌凡言数者。唯列其位。譬不谓三千八百七十。但谓三八七〇耳。
 
 ```
 物
@@ -135,7 +135,7 @@
 也
 ```
 
-或列諸物而具包。輒加「諸」字於其術。今取八駿之二。書如是。
+或列诸物而具包。辄加「诸」字于其术。今取八骏之二。书如是。
 
 ```
 吾嘗觀「渾沌經」之書。方悟「包諸渾沌」之義。
@@ -170,7 +170,7 @@
 也
 ```
 
-或問曰。既得其渾沌語。欲逆得其物。曰。勞「食渾沌」「食諸渾沌」之術可矣。
+或问曰。既得其浑沌语。欲逆得其物。曰。劳「食浑沌」「食诸浑沌」之术可矣。
 
 ```
 吾嘗觀「渾沌經」之書。方悟「包渾沌」「食渾沌」之義。
@@ -183,7 +183,7 @@
 注曰。「「所得皆如白馬」」
 ```
 
-今復以渾沌語書李翰林之生平如是。以示其物包物。物包列。列包物也。
+今复以浑沌语书李翰林之生平如是。以示其物包物。物包列。列包物也。
 
 ```
 物
@@ -222,4 +222,4 @@
 也
 ```
 
-格物之道。至是亦略備矣。其雖誠非編程之所必須。然條理以明。讀寫以便。孰言無益耳。
+格物之道。至是亦略备矣。其虽诚非编程之所必须。然条理以明。读写以便。孰言无益耳。
