Update and rename 12圖畫第十二.md to 12图画第十二.md

--- a/12图画第十二.md
+++ b/12图画第十二.md
@@ -1,8 +1,8 @@
-# 圖畫第十二
+# 图画第十二
 
-子曰。游於藝。昔庖犧作卦。史皇作圖。乃有鳥鼎鸞旂。琱戈黼黻。輿圖絺繡。九州十服。屈子謁廟厥有天問。荀卿屬文以為養目。雲臺畫壁以旌功臣。洛陽鑿磚以紀射馳。毛寫昭君。至於棄市。顧描鄰女。竟得悅之。弗興畫龍。百年祝雨。僧繇點睛。一時飛去。曹為梵象。其衣出水。吳寫神仙。其帶當風。李將軍富貴入畫。雍容金碧。王右丞以畫為詩。幽雅超逸。凌煙功臣。太宗得諸立本。御園駿馬。子美觀諸曹霸。韓幹馬。韓滉牛。宣和鶴。元吉猴。徐熙野筆。黃荃精勾。荊關山峻。米家雲悠。雲林蕭索。松雪俊秀。老蓮高古。桃庵風流。理論董九友。工細仇十洲。有清以降。丹青傳世者不計其數。吾曹先人之苗裔兮。宜乎哉其畫脈之繼武。
+子曰。游于艺。昔庖牺作卦。史皇作图。乃有鸟鼎鸾旂。琱戈黼黻。舆图絺绣。九州十服。屈子谒庙厥有天问。荀卿属文以为养目。云台画壁以旌功臣。洛阳凿砖以纪射驰。毛写昭君。至于弃市。顾描邻女。竟得悦之。弗兴画龙。百年祝雨。僧繇点睛。一时飞去。曹为梵象。其衣出水。吴写神仙。其带当风。李将军富贵入画。雍容金碧。王右丞以画为诗。幽雅超逸。凌烟功臣。太宗得诸立本。御园骏马。子美观诸曹霸。韩干马。韩滉牛。宣和鹤。元吉猴。徐熙野笔。黄荃精勾。荆关山峻。米家云悠。云林萧索。松雪俊秀。老莲高古。桃庵风流。理论董九友。工细仇十洲。有清以降。丹青传世者不计其数。吾曹先人之苗裔兮。宜乎哉其画脉之继武。
 
-今以程式為翰墨。其術有「備紙」「落筆」「運筆」「提筆」云。蓋皆以畫家語方之也。「備紙」者。參二。紙之縱橫長寬也。得其紙。輒「落筆」。「落筆」者。起其一劃也。「運筆」者。一劃既起。連筆而畫也。參皆三。一者其紙。二三者東南。東者。其筆去紙左之遠近。南者。去紙頂之遠近。皆所以定方位者也。運筆再三。而一劃既成。乃施「提筆」。欲復更有所畫者。則復以落筆運筆提筆次第為之云。畫成。裱以示人。古人以識丁字為最易。今且畫丁字為例。
+今以程式为翰墨。其术有「备纸」「落笔」「运笔」「提笔」云。盖皆以画家语方之也。「备纸」者。参二。纸之纵横长宽也。得其纸。辄「落笔」。「落笔」者。起其一划也。「运笔」者。一划既起。连笔而画也。参皆三。一者其纸。二三者东南。东者。其笔去纸左之远近。南者。去纸顶之远近。皆所以定方位者也。运笔再三。而一划既成。乃施「提笔」。欲复更有所画者。则复以落笔运笔提笔次第为之云。画成。裱以示人。古人以识丁字为最易。今且画丁字为例。
 
 ```
 吾嘗觀「「畫譜」」之書。方悟「備紙」「落筆」「運筆」「提筆」「裱畫」之義。
@@ -23,7 +23,7 @@
 施「裱畫」於「紙」於「「出」」。
 ```
 
-或問曰。適所畫者黑。欲其紅。當何如。適筆細。欲粗。當何如。曰。
+或问曰。适所画者黑。欲其红。当何如。适笔细。欲粗。当何如。曰。
 
 ```
 吾嘗觀「「畫譜」」之書。方悟「備紙」「擇筆」「蘸色」「落筆」「運筆」「提筆」「裱畫」之義。
@@ -48,7 +48,7 @@
 施「裱畫」於「紙」於「「出」」。
 ```
 
-十三色者。曰黑。曰鈦白。曰藤黃。曰硃磦。曰硃砂。曰胭脂。曰曙紅。曰赭石。曰大紅。曰花青。曰三綠。曰酞青藍。曰三青。或問曰。擇筆蘸色者。唯筆也。干其紙底事耶。乃以紙為参。曰。一紙其為一圖也。圖非一乃各營其具。是故明之。例曰。
+十三色者。曰黑。曰钛白。曰藤黄。曰硃磦。曰硃砂。曰胭脂。曰曙红。曰赭石。曰大红。曰花青。曰三绿。曰酞青蓝。曰三青。或问曰。择笔蘸色者。唯笔也。干其纸底事耶。乃以纸为参。曰。一纸其为一图也。图非一乃各营其具。是故明之。例曰。
 
 ```
 吾嘗觀「「畫譜」」之書。方悟「備紙」「擇筆」「蘸色」「落筆」「運筆」「提筆」「裱畫」之義。
@@ -78,7 +78,7 @@
 施「裱畫」於「乙紙」於「「出」」。
 ```
 
-或問曰。吾有一色。非赤非青。介乎兩者之間者。不在十三色之中。可得乎。或問曰。色其濃甚。欲薄施淡掃。可為乎。曰。以「調色」。以「蘸水」。
+或问曰。吾有一色。非赤非青。介乎两者之间者。不在十三色之中。可得乎。或问曰。色其浓甚。欲薄施淡扫。可为乎。曰。以「调色」。以「蘸水」。
 
 ```
 吾嘗觀「「畫譜」」之書。方悟「備紙」「擇筆」「蘸色」「蘸水」「調色」「落筆」「運筆」「提筆」「裱畫」之義。
@@ -106,9 +106,9 @@
 施「裱畫」於「紙」於「「出」」。
 ```
 
-又凡曰蘸色。曩所調之色輒棄之。蓋另為一色也。又色可再三調。蘸水亦如是。愈蘸彌淡也。
+又凡曰蘸色。曩所调之色辄弃之。盖另为一色也。又色可再三调。蘸水亦如是。愈蘸弥淡也。
 
-或問曰。適所畫。勾線也。欲設色。當何如。曰。當易「提筆」為「設色」如是。
+或问曰。适所画。勾线也。欲设色。当何如。曰。当易「提笔」为「设色」如是。
 
 ```
 吾嘗觀「「畫譜」」之書。方悟「備紙」「落筆」「運筆」「設色」「裱畫」之義。
@@ -124,7 +124,7 @@
 施「裱畫」於「紙」於「「出」」。
 ```
 
-古人曰青。通稱也。其色每不同指。譬有「又疑瑤台鏡。飛在青雲端」又有「大道如青天。我獨不得出」。天與雲豈同色耶。譬有「青天白日摧紫荊」又有「青天有月來幾時」。晝夜豈亦同色耶。譬有「朝如青絲暮成雪」又有「今朝東門柳。夾道垂青絲」。髮柳之為絲者同。豈其色亦同耶。最奇者。當數孔雀東南飛「青雀白鵠舫」至「皆用青絲穿」四十言。蓋今曰綠。曰藍。曰青。曰灰。曰黑者。古皆云青一字蔽之。兹戲為「青圖」。夫「青圖」者。融諸青於一圖。而相漸變也。
+古人曰青。通称也。其色每不同指。譬有「又疑瑶台镜。飞在青云端」又有「大道如青天。我独不得出」。天与云岂同色耶。譬有「青天白日摧紫荆」又有「青天有月来几时」。昼夜岂亦同色耶。譬有「朝如青丝暮成雪」又有「今朝东门柳。夹道垂青丝」。髮柳之为丝者同。岂其色亦同耶。最奇者。当数孔雀东南飞「青雀白鹄舫」至「皆用青丝穿」四十言。盖今曰绿。曰蓝。曰青。曰灰。曰黑者。古皆云青一字蔽之。兹戏为「青图」。夫「青图」者。融诸青于一图。而相渐变也。
 
 ```
 吾嘗觀「「畫譜」」之書。方悟「備紙」「蘸色」「調色」「落筆」「運筆」「設色」「裱畫」之義。
@@ -168,7 +168,7 @@
 施「裱畫」於「紙」於「「出」」。
 ```
 
-分形者。圖形之遞歸者也。譬木發二枝。枝各發二小枝。小枝復發焉。二生四。四生八。八生十六也。或譬雪華一片。熟視其角。如復有小霙於其中然。或譬鹿茸。或譬閃電。其美也如是。然人之欲之圖者。則頗恨其繁複。而假機器為之。雖百疊千重。亦能分毫畢現也。今以畫樹為例。
+分形者。图形之递归者也。譬木发二枝。枝各发二小枝。小枝复发焉。二生四。四生八。八生十六也。或譬雪华一片。熟视其角。如复有小霙于其中然。或譬鹿茸。或譬闪电。其美也如是。然人之欲之图者。则颇恨其繁複。而假机器为之。虽百叠千重。亦能分毫毕现也。今以画树为例。
 
 ```
 吾嘗觀「「畫譜」」之書。方悟「備紙」「擇筆」「落筆」「運筆」「提筆」「裱畫」之義。
@@ -212,7 +212,7 @@
 施「裱畫」於「紙」於「「出」」
 ```
 
-復以畫霙為例。
+复以画霙为例。
 
 ```
 吾嘗觀「「畫譜」」之書。方悟「備紙」「落筆」「運筆」「提筆」「裱畫」之義。
@@ -264,4 +264,4 @@
 施「裱畫」於「紙」。於「「出」」。
 ```
 
-以程式為丹青者。余素好焉。營之經年。而灑然不倦者。其妙趣愈探而不知其所窮也。但恨一篇不能具載耳。
+以程式为丹青者。余素好焉。营之经年。而洒然不倦者。其妙趣愈探而不知其所穷也。但恨一篇不能具载耳。
