--- a/13宏略第十三.md
+++ b/13宏略第十三.md
@@ -1,8 +1,8 @@
 # 宏略第十三
 
-夫先秦以降。文言用世已逾千年矣。其之同喻一義也。亦可洗鍊。亦可綺麗。亦可鏘鏘。亦可靡靡。或高古詰聱。或淺白俗易。是作者之風姿為顯矣。是文辭之變化亦無窮矣。夫編程者。辭有定式。易一字輒其程式不行。或病其文繁瑣。亦無可為也。故作「宏」。夫宏。唯一言易一言。所以增改其文法也。曩言「有犬臥於通衢。逸馬蹄而殺之。有馬逸於街衢。臥犬遭之而斃」者。為宏。乃曰「逸馬殺犬於道」。故或曰。尋常者。以編程語言編程。以宏者。編程編程語言也。
+夫先秦以降。文言用世已逾千年矣。其之同喻一义也。亦可洗鍊。亦可绮丽。亦可锵锵。亦可靡靡。或高古诘聱。或浅白俗易。是作者之风姿为显矣。是文辞之变化亦无穷矣。夫编程者。辞有定式。易一字辄其程式不行。或病其文繁琐。亦无可为也。故作「宏」。夫宏。唯一言易一言。所以增改其文法也。曩言「有犬卧于通衢。逸马蹄而杀之。有马逸于街衢。卧犬遭之而毙」者。为宏。乃曰「逸马杀犬于道」。故或曰。寻常者。以编程语言编程。以宏者。编程编程语言也。
 
-宏法。以「或云」謂所易何。以「蓋謂」云舊文。凡通用辭。如術之参者。皆以引號括之。今以為「書之」作新文法如是。
+宏法。以「或云」谓所易何。以「盖谓」云旧文。凡通用辞。如术之参者。皆以引号括之。今以为「书之」作新文法如是。
 
 ```
 或云「「書「甲」焉」」。
@@ -18,7 +18,7 @@
 注曰「「是新文法也」」
 ```
 
-又例曰。冪者。自乘也。夫加減乘除皆得直謂「加甲以乙」云。今作冪術。不欲絮絮作「施」語。而欲云「求甲之乙次冪」。故宏之如是。
+又例曰。幂者。自乘也。夫加减乘除皆得直谓「加甲以乙」云。今作幂术。不欲絮絮作「施」语。而欲云「求甲之乙次幂」。故宏之如是。
 
 ```
 注曰「「先為冪術」」
@@ -41,16 +41,16 @@
 求「丙」之「丁」次冪。書之。
 ```
 
-凡宏者。域弗限焉。蓋程式未發。一文之宏悉替之。然後運行也。故「或云」語不得以引號作結。何耶。為替不知其止也。慎之。宏之為自由也。眾君子文彩風流。藉此可傳焉。
+凡宏者。域弗限焉。盖程式未发。一文之宏悉替之。然后运行也。故「或云」语不得以引号作结。何耶。为替不知其止也。慎之。宏之为自由也。众君子文彩风流。藉此可传焉。
 
-陰符十三篇。至是盡矣。縱貫其書。有明義。有變數。有算術。有決策。有循環。有行列。有言語。有方術。有府庫。有格物。有克禍。有圖畫。有宏略也。於是之外。復有丹道一門。本亦自成一章。然以其理奧雅。二三言弗能窮。亦非初學易知。故聊述其大義於是。以資博觀。好事君子自探微焉。
+阴符十三篇。至是尽矣。纵贯其书。有明义。有变数。有算术。有决策。有循环。有行列。有言语。有方术。有府库。有格物。有克祸。有图画。有宏略也。于是之外。复有丹道一门。本亦自成一章。然以其理奥雅。二三言弗能穷。亦非初学易知。故聊述其大义于是。以资博观。好事君子自探微焉。
 
-昔秦王既掃六合。入海求藥為鯨所阻。乃連弩射殺之。漢武亦好神仙之術。而徒誅文成樂通。卒無所獲。後世煉丹餌朮之徒。未嘗絕於世。彼金丹大道者。有內丹。有外丹。內丹者。吐氣納神也。外丹者。燒鼎煉金也。其術多玄奧莫解。周易叄同契。抱朴子載焉。今信之者鮮矣。然近有奇術。投諸機器。可以告往知來。聞一識十。人不之預而智每敵於人者。號曰深度學習。然趨之者若鶩。窮其理者寥寥。比其煉也。每每耗時經日。乃至於月。比其成也。或神機如響。或闇昧無覩。得其方者著之。洋洋然誇諸天下。失之者易之。營營然冀有所得。吾儕每戲言。此誠當代之煉金術也。
+昔秦王既扫六合。入海求药为鲸所阻。乃连弩射杀之。汉武亦好神仙之术。而徒诛文成乐通。卒无所获。后世炼丹饵朮之徒。未尝绝于世。彼金丹大道者。有内丹。有外丹。内丹者。吐气纳神也。外丹者。烧鼎炼金也。其术多玄奥莫解。周易叄同契。抱朴子载焉。今信之者鲜矣。然近有奇术。投诸机器。可以告往知来。闻一识十。人不之预而智每敌于人者。号曰深度学习。然趋之者若鹜。穷其理者寥寥。比其炼也。每每耗时经日。乃至于月。比其成也。或神机如响。或闇昧无覩。得其方者著之。洋洋然夸诸天下。失之者易之。营营然冀有所得。吾侪每戏言。此诚当代之炼金术也。
 
-是道也。其術繁多。有旋積。有循環。有生成對抗。有長短記憶。不可勝數。其理則一宗。何耶。法人之學也。遍觀龜鑑。覓其事理。推被萬事而不爽。初。其未煉也。機器也茫昧然。問以一事。胡亂以答。或驗或否。然則有成例千千萬萬。悉令觀而課之。每驗輒褒之。否輒譴之。乃漸知趨利避害。去偽存真。如水流逐低。草木向陽然。漸進正理也。驗者彌多。否者彌少。正理昭昭。金丹成矣。
+是道也。其术繁多。有旋积。有循环。有生成对抗。有长短记忆。不可胜数。其理则一宗。何耶。法人之学也。遍观龟鑑。觅其事理。推被万事而不爽。初。其未炼也。机器也茫昧然。问以一事。胡乱以答。或验或否。然则有成例千千万万。悉令观而课之。每验辄褒之。否辄谴之。乃渐知趋利避害。去伪存真。如水流逐低。草木向阳然。渐进正理也。验者弥多。否者弥少。正理昭昭。金丹成矣。
 
-請以旋積為例。旋積者。多用以觀圖識物也。譬有一畫。不知所圖者犬耶。馬耶。乃取萬千馬圖。萬千犬圖使習之。乃漸知犬馬之同異。或既知其為馬圖也。然不知馬之所在。或放南山。或馳平野。或浴溪澗。或飲城窟。乃取萬千馬圖既知馬之所在者。令習之。乃能指馬於山野溪窟中。
+请以旋积为例。旋积者。多用以观图识物也。譬有一画。不知所图者犬耶。马耶。乃取万千马图。万千犬图使习之。乃渐知犬马之同异。或既知其为马图也。然不知马之所在。或放南山。或驰平野。或浴溪涧。或饮城窟。乃取万千马图既知马之所在者。令习之。乃能指马于山野溪窟中。
 
-論今者機器之智。由是觀止也。然百年之後。觀止者何。吾死不能知矣。暢想其情。當何其郁郁哉。
+论今者机器之智。由是观止也。然百年之后。观止者何。吾死不能知矣。畅想其情。当何其郁郁哉。
 
-夫編程之奧義也無涯。而一山之竹也有涯。況以學術之盛代。世術日新。法門月異。每有昨之驪珠。今之敝屣。然其為礎礩者。十世弗易。萬變靡離。是書所錄者是矣。其餘不能盡美者。唯待博雅君子。既詳覽其書而熟習其術。靡不能觸類而長之。則雖幽遐詭伏。無所不入。告其往而知其來。舉一隅而反其三。聞一而知十者皆適。然後乃置之尋常而不塞。布之天下而不窕也。
+夫编程之奥义也无涯。而一山之竹也有涯。况以学术之盛代。世术日新。法门月异。每有昨之骊珠。今之敝屣。然其为础礩者。十世弗易。万变靡离。是书所录者是矣。其馀不能尽美者。唯待博雅君子。既详览其书而熟习其术。靡不能触类而长之。则虽幽遐诡伏。无所不入。告其往而知其来。举一隅而反其三。闻一而知十者皆适。然后乃置之寻常而不塞。布之天下而不窕也。
